# protones

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  Cargo.toml  README.md  WORKSPACE  WORKSPACE.bazel  app.cc  app.h  application.cc  main.cc  protones.py  protones.textpb  workspace.bzl
content/: BUILD  controls.textpb  debug.py  do_nothing_mmc5.nes  do_nothing_vrc7.nes  midi.textpb  midi_ld51.textpb  midi_mmc5.textpb  midi_mmc5_z2title.textpb  midi_mmc5_zelda2.textpb  midi_vrc7.textpb  midi_vrc7_custom.textpb  plugin.py  protones.py  zelda2.py
content/arkista/: __init__.py
content/fti/: 00_blank.fti  01_blank_vrc6.fti  01_temple_run_vrc6.fti  02_short_fds_vrc6.fti  03_snare.fti  04_hat.fti  05_trikick.fti  06_title_lead_vrc6.fti  07_2_1.fti  08_open_hat.fti  09_loud_drum.fti  0b_ahh.fti  0c_2_4_vrc6.fti  0d_0_2.fti  0e_fade_in.fti  0f_fade_in_vrc6.fti  10_timpani_dpcm.fti  11_marching_snare.fti  12_p_noise_hat.fti  13_arp.fti  14_arp_vrc6.fti  15_sea_2_1.fti  16_hat_2.fti  17_crash.fti  18_piano.fti  19_snare_2.fti  1a_fairy_vrc6.fti  1b_spooky_vrc6.fti  1c_guitar_vrc6.fti  1d_shaker.fti  1e_5_7_6_vrc6.fti  1f_huge_snare.fti  20_zelda_vrc6.fti  21_vibe_arps_vrc6.fti  22_snare_3.fti  23_the_last_note_vrc6.fti  custom_drums.fti  horn1.fti  horn2.fti  slow_vibrato.fti  (+6 more)
content/fti/cfrantz/: crash.fti  kick.fti  snare.fti  tom.fti
content/fti/vrc7/: bass.textpb  bell.textpb  brass.textpb  chorus.textpb  clarinet.textpb  flute.textpb  guitar.textpb  organ.textpb  piano.textpb  rattling_bell.textpb  soft_bell.textpb  synthesizer.textpb  trumpet.textpb  vibraphone.textpb  xylophone.textpb
content/fti/vrc7/custom/: 00_piano1.textpb  01_piano2.textpb  02_piano3.textpb  03_honktonk.textpb  04_ep1.textpb  05_ep2.textpb  06_harpsic.textpb  07_clavic.textpb  08_celesta.textpb  09_glock.textpb  0a_musicbox.textpb  0b_vibes.textpb  0c_marimba.textpb  0d_xylo.textpb  0e_tubebell.textpb  0f_santur.textpb  10_organ1.textpb  11_organ2.textpb  12_organ3.textpb  13_pipeorg.textpb  14_reedorg.textpb  15_acordian.textpb  16_harmonic.textpb  17_bandneon.textpb  18_nylongt.textpb  19_steelgt.textpb  1a_jazzgt.textpb  1b_cleangt.textpb  1c_mutegt.textpb  1d_overdgt.textpb  1e_distgt.textpb  1f_gtharms.textpb  20_acoubass.textpb  21_fingbass.textpb  22_pickbass.textpb  23_fretless.textpb  24_slapbas1.textpb  25_slapbas2.textpb  26_synbass1.textpb  27_synbass2.textpb  (+89 more)
content/zelda2/: __init__.py  cfplayer.py  cheats.py  execution.py  hitbox.py  memory.py  random.py
everdrive/: arkista.everdrive
imwidget/: BUILD  BUILD.bazel  apu_debug.cc  apu_debug.h  controller_debug.cc  controller_debug.h  imapp.cc  imapp.h  imutil.h  mem_debug.cc  mem_debug.h  midi_setup.cc  midi_setup.h  ppu_debug.cc  ppu_debug.h  python_console.cc  python_console.h
ips/: BUILD  ips.cc  ips.h  ipspatch.cc
midi/: BUILD  BUILD.bazel  dpcm_convert.cc  fti.cc  fti.h  fti_load.cc  midi.cc  midi.h  midi_convert.cc  proto_convert.cc  proto_player.cc
midi/experimental/: cfplayer.s
nes/: BUILD  BUILD.bazel  apu.cc  apu.h  apu_dmc.cc  apu_dmc.h  apu_noise.cc  apu_noise.h  apu_pulse.cc  apu_pulse.h  apu_triangle.cc  apu_triangle.h  base.h  cartridge.cc  cartridge.h  controller.cc  controller.h  cpu6502.cc  cpu6502.h  cpu_test.cc  emu2413.c  fm2.cc  fm2.h  mapper.cc  mapper.h  mapper1.cc  mapper1.h  mapper2.cc  mapper3.cc  mapper4.cc  mapper5.cc  mapper7.cc  mem.cc  mem.h  midi.cc  midi.h  nes.cc  nes.h  pbmacro.h  ppu.cc  (+2 more)
nes/vrc7_audio/: BUILD  dsa_emu2413.c  dsa_emu2413.h  emu2413.c  emu2413.h  vrc7_audio.h  ym2413.c  ym2413.h
proto/: BUILD  BUILD.bazel  apu.proto  config.proto  controller.proto  cpu6502.proto  fti.proto  mappers.proto  midi.proto  midi_convert.proto  nes.proto  ppu.proto  sound.proto
python/: BUILD  BUILD.bazel  protones.cc
python/protones/: __init__.py
resources/: default_keybinds.ron  gamecontrollerdb.txt
rules/: bimpy.BUILD  bimpy.patch  gflags.patch  patched_http_archive.bzl  pybind11.BUILD  system_python.BUILD
src/: lib.rs  main.rs
src/gui/: app.rs  apu.rs  controller.rs  foo.rs  glhelper.rs  hwpalette.rs  input.rs  mod.rs  ppu.rs  preferences.rs  scancode.rs
src/nes/: apu.rs  apu_dmc.rs  apu_noise.rs  apu_pulse.rs  apu_triangle.rs  cartridge.rs  controller.rs  cpu6502.rs  cpu6502_info.rs  mod.rs  nes.rs  ppu.rs  ppu_helper.rs  python.rs  sram.rs
src/nes/mapper/: axrom.rs  cnrom.rs  mapper.rs  mmc1.rs  mmc3.rs  mod.rs  uxrom.rs
src/util/: app_context.rs  mod.rs  pyexec.rs
tests/: cpu6502_test.rs
tools/: BUILD  pack_config.cc  release_local.sh  release_windows.sh
util/: BUILD  file.cc  file.h  logging.cc  os.cc  os.h
util/sound/: BUILD  convert.cc  file.cc  file.h
