[package]
name = "protones"
version = "0.0.0"
edition = "2018"
authors = ["Chris Frantz"]
publish = false

[dependencies]
bitflags = "1.2.1"
byteorder = "1"
structopt = "0.3"

anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4.0"
log = "0.4"
env_logger = "0.8.3"
directories = "3.0"
memmap = "0.7.0"
termcolor = "1.1"
rustyline = "8.2.0"
libc = "0.2"

[target.'cfg(unix)'.dependencies]
nix = "0.18"

ron = "*"
serde = { version = "1", features = ["serde_derive"] }
typetag = "0.1"

sdl2 = "0.34"
gl = "0.14"
nfd = "0.0.4"
imgui = "0.7"
imgui-opengl-renderer = "0.11"
imgui-sdl2 = "0.14"

pyo3 = "0.13.2"
